--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -43,6 +44,8 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
     "genkit": "^1.14.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "^15.5.3",
     "next-themes": "^0.3.0",
@@ -68,3 +71,5 @@
     "typescript": "^5"
   }
 }
+
+    
